--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.amlogic.miracast"
     android:sharedUserId="android.uid.system"
-    android:versionCode="20130910"
-    android:versionName="1.3.201309101826" >
+    android:versionCode="20131105"
+    android:versionName="1.3.201311051055" >
 
     <uses-sdk android:minSdkVersion="14" />
 
@@ -23,7 +23,7 @@
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo" >
+        android:theme="@style/appCustom" >
         <activity
             android:name=".WiFiDirectMainActivity"
             android:configChanges="mnc|mcc|orientation|keyboardHidden|screenSize|screenLayout|keyboard|navigation"
