--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.amlogic.miracast"
     android:sharedUserId="android.uid.system"
-    android:versionCode="20131105"
-    android:versionName="1.3.201311051055" >
+    android:versionCode="20140127"
+    android:versionName="1.3.201401271346" >
 
     <uses-sdk android:minSdkVersion="14" />
 
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.net.wifi.p2p.DISCOVERY_STATE_CHANGE"/>
 
     <!-- Google Play filtering -->
     <uses-feature
