--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,23 +4,34 @@
     android:sharedUserId="android.uid.system"
     android:minSdkVersion="21">
 
-    	<uses-permission android:name="android.permission.INTERNET"></uses-permission>  
-	    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
-	    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> 
-		<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>    
-	    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>  
-	    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
-		<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
-	    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />  
-		<uses-permission android:name="android.permission.READ_PHONE_STATE" />
-		<uses-permission android:name="android.permission.BROADCAST_STICKY" />
-		<uses-permission android:name="droidlogic.permission.SYSTEM_CONTROL" />
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+    <uses-permission android:name="droidlogic.permission.SYSTEM_CONTROL" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+
+        <activity
+            android:name=".LauncherMainActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoDisplay" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.HOME" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:label="@string/app_name"
@@ -29,10 +40,7 @@
             android:clearTaskOnLaunch="true"
             android:stateNotNeeded="true">
             <intent-filter >
-  				 <action android:name="android.intent.action.MAIN" />
-                 <category android:name="android.intent.category.HOME" /> 
- 				 <category android:name="android.intent.category.DEFAULT" /> 
-  				 <category android:name="android.intent.category.MONKEY" /> 
+                <category android:name="android.intent.category.MONKEY" />
             </intent-filter>
         </activity>
     </application>
