--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+ /* Copyright (c) 2014 Amlogic, Inc. All rights reserved.
+**
+** This source code is subject to the terms and conditions defined in the
+** file 'LICENSE' which is part of this source code package.
+**
+** Description: manifest
+*/
+-->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.droidlogic.mboxlauncher"
     android:sharedUserId="android.uid.system"
