mboxLauncher: use-library droidlogic.software.core [3/11]
PD# NONE

in treble mode, droidlogic.jar put to /vendor
so it can not be added to BOOTCLASSPATH

Change-Id: I694b8050f37cb620422979da8161d76cbe88a154

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
-
+        <uses-library android:name="droidlogic.software.core" />
         <activity
             android:label="@string/app_name"
             android:name=".Launcher"
