tvinput: add porting tvinput to HIDL architecture [12/12]
PD# 157786

need use hwbinder instead of binder for RPC since from O

Change-Id: Ib9e4c6e457e0b3e4c2a2f302de19e0cbb39c770b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,7 @@
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
         <uses-library android:name="droidlogic.software.core" />
+        <uses-library android:name="droidlogic.tv.software.core" />
         <activity
             android:label="@string/app_name"
             android:name=".Launcher"
