--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,8 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:defaultToDeviceProtectedStorage="true"
+        android:directBootAware="true"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
         <uses-library android:name="droidlogic.software.core" />
